Fixed table handling.

--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -17,7 +17,19 @@
   </thead>
 
   <tbody>
-      <tr>
+      <tr class="even">
+        <td class="date">2014-12-09</td>
+        <td class="speaker">Michael Pigg and Ken Rimple</td>
+        <td class="title">Reactive applications with Scala and AngularJS</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/218821822/">meetup.com/.../218821822</a></td>
+        <td class="slides">
+        </td>
+        <td class="code">
+        </td>
+        <td class="other">
+        </td>
+      </tr>
+      <tr class="odd">
         <td class="date">2014-10-21</td>
         <td class="speaker">Helena Edelson</td>
         <td class="title">Escape From Hadoop: Spark Streaming, Cassandra, Scala &amp; Akka</td>
@@ -30,19 +42,19 @@
         </td>
         <td class="other">
             <a href="javascript:void(0)" class="resources-link"
-               data-state="closed" data-resources-id="resources-0">
+               data-state="closed" data-resources-id="resources-1">
               Resources
               <span class="pointer pointer-closed fa fa-caret-right"></span>
               <span class="pointer pointer-open fa fa-caret-down" style="display: none"></span>
             </a>
         </td>
       </tr>
-      <tr id="resources-0" style="display: none">
+      <tr id="resources-1" style="display: none">
         <td colspan="7">
           <iframe src="talks/helena/resources.html" width="100%" height="100%"></iframe>
         </td>
       </tr>
-      <tr>
+      <tr class="even">
         <td class="date">2014-09-16</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Live coding a CRUD database in Scala</td>
@@ -55,12 +67,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-1" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="odd">
         <td class="date">2014-07-24</td>
         <td class="speaker">Brad Miller</td>
         <td class="title">The Scala-Graph Library</td>
@@ -74,12 +81,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-2" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="even">
         <td class="date">2014-06-12</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Haskell and React.js</td>
@@ -92,12 +94,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-3" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="odd">
         <td class="date">2014-05-20</td>
         <td class="speaker">Dustin Getz &amp; Daniel Miladinov</td>
         <td class="title">React.js and functional Javascript</td>
@@ -109,12 +106,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-4" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="even">
         <td class="date">2014-04-24</td>
         <td class="speaker">Roland Kuhn</td>
         <td class="title">Roland Kuhn leads a Q&amp;A and live coding session</td>
@@ -126,12 +118,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-5" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="odd">
         <td class="date">2014-03-20</td>
         <td class="speaker">Gary Keorkunian</td>
         <td class="title">Viridity&#39;s Scala Units of Measure and Quantities API</td>
@@ -146,12 +133,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-6" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="even">
         <td class="date">2013-09-25</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Writing Functional Wrappers for Legacy APIs (joint meeting of PHASE and PhillyJUG)</td>
@@ -167,12 +149,7 @@
             <a class="video-link" href="http://vimeo.com/75591447">Video</a>
         </td>
       </tr>
-      <tr id="resources-7" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="odd">
         <td class="date">2013-07-09</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Gradle and Scala</td>
@@ -186,12 +163,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-8" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="even">
         <td class="date">2013-04-16</td>
         <td class="speaker">Dmitriy Setrakyan</td>
         <td class="title">Pearls of Distributed Programming with Scala and GridGain</td>
@@ -203,12 +175,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-9" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="odd">
         <td class="date">2012-12-04</td>
         <td class="speaker">Duncan Devore</td>
         <td class="title">CQRS and Event Sourcing</td>
@@ -222,12 +189,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-10" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="even">
         <td class="date">2012-10-23</td>
         <td class="speaker">Nick McAvoy</td>
         <td class="title">Typesafe Slick</td>
@@ -241,12 +203,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-11" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="odd">
         <td class="date">2012-10-02</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">The Play! Framework</td>
@@ -260,12 +217,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-12" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="even">
         <td class="date">2012-06-12</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scalaz, Monads, Functors and You</td>
@@ -279,12 +231,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-13" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="odd">
         <td class="date">2012-05-15</td>
         <td class="speaker">Adam Hinz and George Adams</td>
         <td class="title">Dispatch, Unfiltered, Blue Eyes and Play: A Comparison</td>
@@ -296,12 +243,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-14" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="even">
         <td class="date">2012-01-26</td>
         <td class="speaker">Mads Hartmann Jenson</td>
         <td class="title">Building SBT Plugins</td>
@@ -316,12 +258,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-15" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="odd">
         <td class="date">2011-11-15</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scala on the Android Platform</td>
@@ -334,12 +271,7 @@
             <a class="video-link" href="http://vimeo.com/32516782">Video</a>
         </td>
       </tr>
-      <tr id="resources-16" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="even">
         <td class="date">2011-10-18</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">SBT 0.10 and 0.11 Overview</td>
@@ -353,12 +285,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-17" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="odd">
         <td class="date">2011-09-20</td>
         <td class="speaker">Erik Osheim</td>
         <td class="title">Scala Type Classes</td>
@@ -372,12 +299,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr id="resources-18" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
-        </td>
-      </tr>
-      <tr>
+      <tr class="even">
         <td class="date">2011-08-10</td>
         <td class="speaker">Jamie Allen</td>
         <td class="title">Disrupters</td>
@@ -390,11 +312,6 @@
             <a class="code-link" href="https://github.com/jamie-allen/sdisruptor">github.com/jamie-allen/sdisruptor</a>
         </td>
         <td class="other">
-        </td>
-      </tr>
-      <tr id="resources-19" style="display: none">
-        <td colspan="7">
-          <iframe src="" width="100%" height="100%"></iframe>
         </td>
       </tr>
   </tbody>
