--- a/less/_table.less
+++ b/less/_table.less
@@ -36,11 +36,11 @@ table {
       vertical-align: top;
       border-bottom: 1px solid @tableRowBorderColor;
 
-      &:nth-child(odd) {
+      &.odd {
         background: @tableOddRowBackground;
       }
 
-      &:nth-child(even) {
+      &.even {
         background: @tableEvenRowBackground;
       }
     }
