--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -18,6 +18,21 @@
 
   <tbody>
       <tr class="even">
+        <td class="date">2015-03-19</td>
+        <td class="speaker">Brian Clapper</td>
+        <td class="title">Messing Around with Typesafe Slick</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/221076940/">meetup.com/.../221076940</a></td>
+        <td class="slides">
+            <a class="slides-link" href="talks/slick-2015-03-19/index.html">Slides</a>
+              <span class="slides-comment">(HTML + JavaScript)</span>
+        </td>
+        <td class="code">
+            <a class="code-link" href="https://github.com/bmc/slick-presentation-2015-03-19">github.com/bmc/slick-presentation-2015-03-19</a>
+        </td>
+        <td class="other">
+        </td>
+      </tr>
+      <tr class="odd">
         <td class="date">2014-12-09</td>
         <td class="speaker">Michael Pigg and Ken Rimple</td>
         <td class="title">Reactive applications with Scala and AngularJS</td>
@@ -29,7 +44,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2014-10-21</td>
         <td class="speaker">Helena Edelson</td>
         <td class="title">Escape From Hadoop: Spark Streaming, Cassandra, Scala &amp; Akka</td>
@@ -42,19 +57,19 @@
         </td>
         <td class="other">
             <a href="javascript:void(0)" class="resources-link"
-               data-state="closed" data-resources-id="resources-1">
+               data-state="closed" data-resources-id="resources-2">
               Resources
               <span class="pointer pointer-closed fa fa-caret-right"></span>
               <span class="pointer pointer-open fa fa-caret-down" style="display: none"></span>
             </a>
         </td>
       </tr>
-      <tr id="resources-1" style="display: none">
+      <tr id="resources-2" style="display: none">
         <td colspan="7">
           <iframe src="talks/helena/resources.html" width="100%" height="100%"></iframe>
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2014-09-16</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Live coding a CRUD database in Scala</td>
@@ -67,7 +82,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2014-07-24</td>
         <td class="speaker">Brad Miller</td>
         <td class="title">The Scala-Graph Library</td>
@@ -81,7 +96,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2014-06-12</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Haskell and React.js</td>
@@ -94,10 +109,10 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2014-05-20</td>
         <td class="speaker">Dustin Getz &amp; Daniel Miladinov</td>
-        <td class="title">React.js and functional Javascript</td>
+        <td class="title">React.js and functional JavaScript</td>
         <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/167318632/">meetup.com/.../167318632</a></td>
         <td class="slides">
         </td>
@@ -106,7 +121,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2014-04-24</td>
         <td class="speaker">Roland Kuhn</td>
         <td class="title">Roland Kuhn leads a Q&amp;A and live coding session</td>
@@ -118,7 +133,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2014-03-20</td>
         <td class="speaker">Gary Keorkunian</td>
         <td class="title">Viridity&#39;s Scala Units of Measure and Quantities API</td>
@@ -133,14 +148,14 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2013-09-25</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Writing Functional Wrappers for Legacy APIs (joint meeting of PHASE and PhillyJUG)</td>
         <td class="meetup-link"><a href="http://phillyjug.com/2013/09/25/wrappers/">phillyjug.com/2013/09/25/wrappers/</a></td>
         <td class="slides">
             <a class="slides-link" href="https://rawgithub.com/MartinSnyder/scala-jdbc/master/presentation/index.html">Slides</a>
-              <span class="slides-comment">(HTML + Javascript)</span>
+              <span class="slides-comment">(HTML + JavaScript)</span>
         </td>
         <td class="code">
             <a class="code-link" href="https://github.com/MartinSnyder/scala-jdbc">github.com/MartinSnyder/scala-jdbc</a>
@@ -149,21 +164,21 @@
             <a class="video-link" href="http://vimeo.com/75591447">Video</a>
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2013-07-09</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Gradle and Scala</td>
         <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/125411192/">meetup.com/.../125411192</a></td>
         <td class="slides">
             <a class="slides-link" href="http://scala-phase.org/talks/jason-feingold-gradle/">Slides</a>
-              <span class="slides-comment">(HTML + Javascript)</span>
+              <span class="slides-comment">(HTML + JavaScript)</span>
         </td>
         <td class="code">
         </td>
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2013-04-16</td>
         <td class="speaker">Dmitriy Setrakyan</td>
         <td class="title">Pearls of Distributed Programming with Scala and GridGain</td>
@@ -175,28 +190,14 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2012-12-04</td>
         <td class="speaker">Duncan Devore</td>
         <td class="title">CQRS and Event Sourcing</td>
         <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/88673682/">meetup.com/.../88673682</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/duncan-devore-cqrs/">Slides</a>
-              <span class="slides-comment">(HTML + Javascript)</span>
-        </td>
-        <td class="code">
-        </td>
-        <td class="other">
-        </td>
-      </tr>
-      <tr class="even">
-        <td class="date">2012-10-23</td>
-        <td class="speaker">Nick McAvoy</td>
-        <td class="title">Typesafe Slick</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/85382662/">meetup.com/.../85382662</a></td>
-        <td class="slides">
-            <a class="slides-link" href="http://ohbadiah.github.io/phase_slick/">Slides</a>
-              <span class="slides-comment">(HTML + Javascript)</span>
+              <span class="slides-comment">(HTML + JavaScript)</span>
         </td>
         <td class="code">
         </td>
@@ -204,13 +205,13 @@
         </td>
       </tr>
       <tr class="odd">
-        <td class="date">2012-10-02</td>
-        <td class="speaker">Brian Clapper</td>
-        <td class="title">The Play! Framework</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/82990972/">meetup.com/.../82990972</a></td>
+        <td class="date">2012-10-23</td>
+        <td class="speaker">Nick McAvoy</td>
+        <td class="title">Typesafe Slick</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/85382662/">meetup.com/.../85382662</a></td>
         <td class="slides">
-            <a class="slides-link" href="http://www.ardentex.com/publications/the-play-framework/slides.html">Slides</a>
-              <span class="slides-comment">(HTML + Javascript)</span>
+            <a class="slides-link" href="http://ohbadiah.github.io/phase_slick/">Slides</a>
+              <span class="slides-comment">(HTML + JavaScript)</span>
         </td>
         <td class="code">
         </td>
@@ -218,6 +219,20 @@
         </td>
       </tr>
       <tr class="even">
+        <td class="date">2012-10-02</td>
+        <td class="speaker">Brian Clapper</td>
+        <td class="title">The Play! Framework</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/82990972/">meetup.com/.../82990972</a></td>
+        <td class="slides">
+            <a class="slides-link" href="http://www.ardentex.com/publications/the-play-framework/slides.html">Slides</a>
+              <span class="slides-comment">(HTML + JavaScript)</span>
+        </td>
+        <td class="code">
+        </td>
+        <td class="other">
+        </td>
+      </tr>
+      <tr class="odd">
         <td class="date">2012-06-12</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scalaz, Monads, Functors and You</td>
@@ -231,7 +246,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2012-05-15</td>
         <td class="speaker">Adam Hinz and George Adams</td>
         <td class="title">Dispatch, Unfiltered, Blue Eyes and Play: A Comparison</td>
@@ -243,7 +258,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2012-01-26</td>
         <td class="speaker">Mads Hartmann Jenson</td>
         <td class="title">Building SBT Plugins</td>
@@ -258,7 +273,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2011-11-15</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scala on the Android Platform</td>
@@ -271,14 +286,28 @@
             <a class="video-link" href="http://vimeo.com/32516782">Video</a>
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2011-10-18</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">SBT 0.10 and 0.11 Overview</td>
         <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/35297532/">meetup.com/.../35297532</a></td>
         <td class="slides">
             <a class="slides-link" href="http://www.ardentex.com/publications/intro-sbt/slides.html">Slides</a>
-              <span class="slides-comment">(HTML + Javascript)</span>
+              <span class="slides-comment">(HTML + JavaScript)</span>
+        </td>
+        <td class="code">
+        </td>
+        <td class="other">
+        </td>
+      </tr>
+      <tr class="even">
+        <td class="date">2011-09-20</td>
+        <td class="speaker">Erik Osheim</td>
+        <td class="title">Scala Type Classes</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/31595792/">meetup.com/.../31595792</a></td>
+        <td class="slides">
+            <a class="slides-link" href="http://plastic-idolatry.com/typcls/">Slides</a>
+              <span class="slides-comment">(HTML + JavaScript)</span>
         </td>
         <td class="code">
         </td>
@@ -286,27 +315,13 @@
         </td>
       </tr>
       <tr class="odd">
-        <td class="date">2011-09-20</td>
-        <td class="speaker">Erik Osheim</td>
-        <td class="title">Scala Type Classes</td>
-        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/31595792/">meetup.com/.../31595792</a></td>
-        <td class="slides">
-            <a class="slides-link" href="http://plastic-idolatry.com/typcls/">Slides</a>
-              <span class="slides-comment">(HTML + Javascript)</span>
-        </td>
-        <td class="code">
-        </td>
-        <td class="other">
-        </td>
-      </tr>
-      <tr class="even">
         <td class="date">2011-08-10</td>
         <td class="speaker">Jamie Allen</td>
         <td class="title">Disrupters</td>
         <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/26666971/">meetup.com/.../26666971</a></td>
         <td class="slides">
             <a class="slides-link" href="talks/jamie-allen-sdisruptor/index.html">Slides</a>
-              <span class="slides-comment">(HTML + Javascript)</span>
+              <span class="slides-comment">(HTML + JavaScript)</span>
         </td>
         <td class="code">
             <a class="code-link" href="https://github.com/jamie-allen/sdisruptor">github.com/jamie-allen/sdisruptor</a>
