--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -18,6 +18,21 @@
 
   <tbody>
       <tr class="even">
+        <td class="date">2015-04-22</td>
+        <td class="speaker">Michael Pilquist</td>
+        <td class="title">An Introduction to Shapeless via Scodec</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/221842395/">meetup.com/.../221842395</a></td>
+        <td class="slides">
+            <a class="slides-link" href="talks/shapeless-2015-04-22.pdf">Slides</a>
+              <span class="slides-comment">(PDF)</span>
+        </td>
+        <td class="code">
+        </td>
+        <td class="other">
+            <a class="video-link" href="https://www.youtube.com/watch?v=eNJ6ZbbrP2A">Video</a>
+        </td>
+      </tr>
+      <tr class="odd">
         <td class="date">2015-03-19</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">Messing Around with Typesafe Slick</td>
@@ -32,7 +47,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2014-12-09</td>
         <td class="speaker">Michael Pigg and Ken Rimple</td>
         <td class="title">Reactive applications with Scala and AngularJS</td>
@@ -44,7 +59,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2014-10-21</td>
         <td class="speaker">Helena Edelson</td>
         <td class="title">Escape From Hadoop: Spark Streaming, Cassandra, Scala &amp; Akka</td>
@@ -57,19 +72,19 @@
         </td>
         <td class="other">
             <a href="javascript:void(0)" class="resources-link"
-               data-state="closed" data-resources-id="resources-2">
+               data-state="closed" data-resources-id="resources-3">
               Resources
               <span class="pointer pointer-closed fa fa-caret-right"></span>
               <span class="pointer pointer-open fa fa-caret-down" style="display: none"></span>
             </a>
         </td>
       </tr>
-      <tr id="resources-2" style="display: none">
+      <tr id="resources-3" style="display: none">
         <td colspan="7">
           <iframe src="talks/helena/resources.html" width="100%" height="100%"></iframe>
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2014-09-16</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Live coding a CRUD database in Scala</td>
@@ -82,7 +97,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2014-07-24</td>
         <td class="speaker">Brad Miller</td>
         <td class="title">The Scala-Graph Library</td>
@@ -96,7 +111,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2014-06-12</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Haskell and React.js</td>
@@ -109,7 +124,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2014-05-20</td>
         <td class="speaker">Dustin Getz &amp; Daniel Miladinov</td>
         <td class="title">React.js and functional JavaScript</td>
@@ -121,7 +136,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2014-04-24</td>
         <td class="speaker">Roland Kuhn</td>
         <td class="title">Roland Kuhn leads a Q&amp;A and live coding session</td>
@@ -133,7 +148,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2014-03-20</td>
         <td class="speaker">Gary Keorkunian</td>
         <td class="title">Viridity&#39;s Scala Units of Measure and Quantities API</td>
@@ -148,7 +163,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2013-09-25</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Writing Functional Wrappers for Legacy APIs (joint meeting of PHASE and PhillyJUG)</td>
@@ -164,7 +179,7 @@
             <a class="video-link" href="http://vimeo.com/75591447">Video</a>
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2013-07-09</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Gradle and Scala</td>
@@ -178,7 +193,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2013-04-16</td>
         <td class="speaker">Dmitriy Setrakyan</td>
         <td class="title">Pearls of Distributed Programming with Scala and GridGain</td>
@@ -190,7 +205,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2012-12-04</td>
         <td class="speaker">Duncan Devore</td>
         <td class="title">CQRS and Event Sourcing</td>
@@ -204,7 +219,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2012-10-23</td>
         <td class="speaker">Nick McAvoy</td>
         <td class="title">Typesafe Slick</td>
@@ -218,7 +233,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2012-10-02</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">The Play! Framework</td>
@@ -232,7 +247,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2012-06-12</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scalaz, Monads, Functors and You</td>
@@ -246,7 +261,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2012-05-15</td>
         <td class="speaker">Adam Hinz and George Adams</td>
         <td class="title">Dispatch, Unfiltered, Blue Eyes and Play: A Comparison</td>
@@ -258,7 +273,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2012-01-26</td>
         <td class="speaker">Mads Hartmann Jenson</td>
         <td class="title">Building SBT Plugins</td>
@@ -273,7 +288,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2011-11-15</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scala on the Android Platform</td>
@@ -286,7 +301,7 @@
             <a class="video-link" href="http://vimeo.com/32516782">Video</a>
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2011-10-18</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">SBT 0.10 and 0.11 Overview</td>
@@ -300,7 +315,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2011-09-20</td>
         <td class="speaker">Erik Osheim</td>
         <td class="title">Scala Type Classes</td>
@@ -314,7 +329,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2011-08-10</td>
         <td class="speaker">Jamie Allen</td>
         <td class="title">Disrupters</td>
