Added Spark Streaming video

--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -29,6 +29,7 @@
         <td class="code">
         </td>
         <td class="other">
+            <a class="video-link" href="https://www.youtube.com/watch?v=2STfulBcorA">Video</a>
         </td>
       </tr>
       <tr class="odd">
