--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -18,6 +18,19 @@
 
   <tbody>
       <tr class="even">
+        <td class="date">2016-09-07</td>
+        <td class="speaker">Matthew Butt</td>
+        <td class="title">Scalatron!</td>
+        <td class="meetup-link"><a href="http://www.meetup.com/scala-phase/events/231545055/">meetup.com/.../231545055</a></td>
+        <td class="slides">
+        </td>
+        <td class="code">
+            <a class="code-link" href="https://github.com/grandivory/scaltron-bot/">github.com/grandivory/scaltron-bot/</a>
+        </td>
+        <td class="other">
+        </td>
+      </tr>
+      <tr class="odd">
         <td class="date">2016-06-16</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">RDDs, DataFrames and Datasets in Apache Spark</td>
@@ -31,7 +44,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2016-05-18</td>
         <td class="speaker">Michael Pilquist</td>
         <td class="title">From Simulacrum to Typeclassic</td>
@@ -45,7 +58,7 @@
             <a class="video-link" href="https://www.youtube.com/watch?v=Crc2RHWrcLI">Video</a>
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2015-09-10</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">An Introduction to Spark Streaming</td>
@@ -59,7 +72,7 @@
             <a class="video-link" href="https://www.youtube.com/watch?v=2STfulBcorA">Video</a>
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2015-04-22</td>
         <td class="speaker">Michael Pilquist</td>
         <td class="title">An Introduction to Shapeless via Scodec</td>
@@ -73,7 +86,7 @@
             <a class="video-link" href="https://www.youtube.com/watch?v=eNJ6ZbbrP2A">Video</a>
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2015-03-19</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">Messing Around with Typesafe Slick</td>
@@ -87,7 +100,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2014-12-09</td>
         <td class="speaker">Michael Pigg and Ken Rimple</td>
         <td class="title">Reactive applications with Scala and AngularJS</td>
@@ -99,7 +112,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2014-10-21</td>
         <td class="speaker">Helena Edelson</td>
         <td class="title">Escape From Hadoop: Spark Streaming, Cassandra, Scala &amp; Akka</td>
@@ -111,19 +124,19 @@
         </td>
         <td class="other">
             <a href="javascript:void(0)" class="resources-link"
-               data-state="closed" data-resources-id="resources-6">
+               data-state="closed" data-resources-id="resources-7">
               Resources
               <span class="pointer pointer-closed fa fa-caret-right"></span>
               <span class="pointer pointer-open fa fa-caret-down" style="display: none"></span>
             </a>
         </td>
       </tr>
-      <tr id="resources-6" style="display: none">
+      <tr id="resources-7" style="display: none">
         <td colspan="7">
           <iframe src="talks/helena/resources.html" width="100%" height="100%"></iframe>
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2014-09-16</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Live coding a CRUD database in Scala</td>
@@ -136,7 +149,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2014-07-24</td>
         <td class="speaker">Brad Miller</td>
         <td class="title">The Scala-Graph Library</td>
@@ -149,7 +162,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2014-06-12</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Haskell and React.js</td>
@@ -162,7 +175,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2014-05-20</td>
         <td class="speaker">Dustin Getz &amp; Daniel Miladinov</td>
         <td class="title">React.js and functional JavaScript</td>
@@ -174,7 +187,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2014-04-24</td>
         <td class="speaker">Roland Kuhn</td>
         <td class="title">Roland Kuhn leads a Q&amp;A and live coding session</td>
@@ -186,7 +199,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2014-03-20</td>
         <td class="speaker">Gary Keorkunian</td>
         <td class="title">Viridity&#39;s Scala Units of Measure and Quantities API</td>
@@ -200,7 +213,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2013-09-25</td>
         <td class="speaker">Martin Snyder</td>
         <td class="title">Writing Functional Wrappers for Legacy APIs (joint meeting of PHASE and PhillyJUG)</td>
@@ -215,7 +228,7 @@
             <a class="video-link" href="http://vimeo.com/75591447">Video</a>
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2013-07-09</td>
         <td class="speaker">Jason Feingold</td>
         <td class="title">Gradle and Scala</td>
@@ -228,7 +241,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2013-04-16</td>
         <td class="speaker">Dmitriy Setrakyan</td>
         <td class="title">Pearls of Distributed Programming with Scala and GridGain</td>
@@ -240,7 +253,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2012-12-04</td>
         <td class="speaker">Duncan Devore</td>
         <td class="title">CQRS and Event Sourcing</td>
@@ -253,7 +266,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2012-10-23</td>
         <td class="speaker">Nick McAvoy</td>
         <td class="title">Typesafe Slick</td>
@@ -266,7 +279,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2012-10-02</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">The Play! Framework</td>
@@ -279,7 +292,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2012-06-12</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scalaz, Monads, Functors and You</td>
@@ -292,7 +305,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2012-05-15</td>
         <td class="speaker">Adam Hinz and George Adams</td>
         <td class="title">Dispatch, Unfiltered, Blue Eyes and Play: A Comparison</td>
@@ -304,7 +317,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2012-01-26</td>
         <td class="speaker">Mads Hartmann Jenson</td>
         <td class="title">Building SBT Plugins</td>
@@ -318,7 +331,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2011-11-15</td>
         <td class="speaker">Yuvi Masory</td>
         <td class="title">Scala on the Android Platform</td>
@@ -331,7 +344,7 @@
             <a class="video-link" href="http://vimeo.com/32516782">Video</a>
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2011-10-18</td>
         <td class="speaker">Brian Clapper</td>
         <td class="title">SBT 0.10 and 0.11 Overview</td>
@@ -344,7 +357,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="even">
+      <tr class="odd">
         <td class="date">2011-09-20</td>
         <td class="speaker">Erik Osheim</td>
         <td class="title">Scala Type Classes</td>
@@ -357,7 +370,7 @@
         <td class="other">
         </td>
       </tr>
-      <tr class="odd">
+      <tr class="even">
         <td class="date">2011-08-10</td>
         <td class="speaker">Jamie Allen</td>
         <td class="title">Disrupters</td>
