Added Monadic Logging talk.

--- a/less/_table.less
+++ b/less/_table.less
@@ -8,6 +8,7 @@
 @tableHeaderBorderColor: darken(@tableRowBorderColor, 30%);
 
 table {
+  font-size:        @baseFontSize;
   width:            100%;
   margin-top:       20px;
   border-width:     0;
