Updated Marcus' Henry's talk details.

--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -25,9 +25,10 @@
         <td class="slides">
         </td>
         <td class="code">
+            <a class="code-link" href="https://github.com/dreadedsoftware/2018_ScalaDays_TyDD">github.com/dreadedsoftware/2018_ScalaDays_TyDD</a>
         </td>
         <td class="other">
-            <a class="video-link" href="https://youtu.be/x0BnmwXM4Lo">Video</a>
+            <a class="video-link" href="https://youtu.be/x8Cs-tC_ZSs">Video</a>
         </td>
       </tr>
       <tr class="odd">
