--- a/less/_table.less
+++ b/less/_table.less
@@ -78,4 +78,14 @@ table.talks-table {
       display: block;
     }
   }
+
+  .talk {
+    .details {
+      ul {
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-left: 0;
+      }
+    }
+  }
 }
