--- a/less/_table.less
+++ b/less/_table.less
@@ -48,7 +48,11 @@ table {
 
     td {
       border-width: 0;
-      padding:      5px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      padding-right: 15px;
+      margin-right: 15px;
+      padding-left: 0;
       border-style: none;
     }
   }
@@ -84,7 +88,7 @@ table.talks-table {
       ul {
         margin-top: 0;
         margin-bottom: 0;
-        padding-left: 0;
+        padding-left: 25px;
       }
     }
   }
