Get talks to render better in mobile

--- a/less/custom.less
+++ b/less/custom.less
@@ -25,16 +25,23 @@
   }
 }
 
-tr.talk {
-  td {
-    text-align: left;
+#talks {
+  text-align: left;
+
+  .title {
+    font-style: italic;
   }
+
   .details {
+    margin-left: 3em;
     ul {
+      margin-left: 0;
+      padding: 0;
+
       li {
         list-style-type: none;
-        margin-left: 0;
         padding-left: 0;
+        margin-left: 0;
       }
     }
   }
