Add some text margins in the banner on wide screens

--- a/less/custom.less
+++ b/less/custom.less
@@ -46,3 +46,36 @@
     }
   }
 }
+
+.banner-wide-text-margins {
+  #banner {
+    .inner {
+      p {
+        margin-left: 20px !important;
+        margin-right: 20px !important;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 736px) {
+}
+
+@media screen and (max-width: 980px) {
+  .banner-wide-text-margins;
+}
+
+@media screen and (max-width: 1280px) {
+  .banner-wide-text-margins;
+}
+
+@media screen and (max-width: 1680px) {
+  .banner-wide-text-margins;
+}
+
+@media screen and (min-width: 1681px) {
+  .banner-wide-text-margins;
+}
