Emphasize full name in yellow.

--- a/less/custom.less
+++ b/less/custom.less
@@ -21,6 +21,10 @@
     }
     p {
       text-transform: none !important;
+
+      .full-name {
+        color: #ffff00 !important;
+      }
     }
   }
 }
