Now builds with Jekyll, in preparation for moving to GH Pages

--- a/talks.mustache
+++ b/talks.mustache
@@ -36,6 +36,13 @@
             </a>
           </li>
           {{/video}}
+          {{#resources}}
+          <li>
+            <a target="_blank" class="resources-link" href="{{resources}}">
+              <i class="far fa-file-alt"></i> Resources
+            </a>
+          </li>
+          {{/resources}}
         </ul>
       </div>
     </div>
