--- a/talks.mustache
+++ b/talks.mustache
@@ -1,4 +1,4 @@
-<div>
+<div id="talk-block">
   {{! In the loop, you have access to each element's fields, implicitly.}}
   {{#talks}}
     <div class="talk">
