Meeting link -> Event page

--- a/talks.mustache
+++ b/talks.mustache
@@ -10,7 +10,7 @@
           {{#meeting-link}}
           <li class="meetup-link">
             <a target="_blank" href="{{meeting_link}}">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           {{/meeting-link}}
